--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "jose": "^5.9.6",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.0",
     "next": "15.0.4",
     "react": "^19.0.0",
