--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "lucide-react": "^0.474.0",
     "mongoose": "^8.9.0",
     "next": "15.0.4",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "social-media": "file:",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1"
